--- a/Outfitry-HTML/custom.html
+++ b/Outfitry-HTML/custom.html
@@ -18,7 +18,7 @@
     /* Body & Font */
     body {
       font-family: 'Prompt', sans-serif;
-      background-color: #fff7f0;
+      background-color: #fefef9;
       color: #333;
       line-height: 1.6;
       margin: 0;
@@ -313,7 +313,7 @@
     .main-content {
       max-width: 1200px;
       margin: 0 auto;
-      background-color: #fff7f0;
+      background-color: #fefef9;
       padding: 20px;
       padding-top: 120px; /* Space below topbar */
     }
@@ -525,7 +525,7 @@
       </div>
       <div class="nav-right">
         <a href="login.html" data-translate="login">Login</a>
-        <a href="#" class="cta" data-translate="cta">Get Outfitry Free</a>
+        <a href="signup.html" class="cta" data-translate="cta">Get Outfitry Free</a>
         <select class="lang-select" aria-label="Select language" onchange="changeLanguage(this.value)">
           <option value="en">English</option>
           <option value="th">ไทย</option>
@@ -556,7 +556,7 @@
         <div class="shop-info">
           <h3 data-translate="shop_dream_fabric">ผ้าสร้างฝัน</h3>
           <p data-translate="location_lam_luk_ka">Lam Luk Ka, Pathum Thani</p>
-          <p data-translate="rating_4_8">⭐ 4.8 (122)</p>
+          <p data-translate="rating_4_8">⭐ 4.8 (10)</p>
           <p class="promotion" data-translate="promo_dream_fabric">ลด 20% สำหรับชุดสั่งตัดครั้งแรก</p>
         </div>
       </a>
@@ -566,7 +566,7 @@
         <div class="shop-info">
           <h3 data-translate="shop_flowing_fabric">Flowing Fabric</h3>
           <p data-translate="location_sathorn">Sathorn, BKK</p>
-          <p data-translate="rating_4_6">⭐ 4.6 (102)</p>
+          <p data-translate="rating_4_6">⭐ 4.6 (9)</p>
           <p class="placeholder">Placeholder</p>
         </div>
       </a>
@@ -576,7 +576,7 @@
         <div class="shop-info">
           <h3 data-translate="shop_woven_love">ทอรัก ปักใจ</h3>
           <p data-translate="location_khlong_luang">Khlong Luang, Pathum Thani</p>
-          <p data-translate="rating_4_8_99">⭐ 4.8 (99)</p>
+          <p data-translate="rating_4_8_99">⭐ 4.8 (12)</p>
           <p class="placeholder">Placeholder</p>
         </div>
       </a>
@@ -586,8 +586,8 @@
         <div class="shop-info">
           <h3 data-translate="shop_tailors_touch">Tailor's Touch</h3>
           <p data-translate="location_bangna">Bangna BKK</p>
-          <p data-translate="rating_4_7">⭐ 4.7 (79)</p>
-          <p class="promotion" data-translate="promo_tailors_touch">แถมผ้าพันคอเมื่อสั่งตัดชุดมูลค่า 3,000 บาทขึ้นไป</p>
+          <p data-translate="rating_4_7">⭐ 4.7 (10)</p>
+          <p class="promotion" data-translate="promo_tailors_touch">แถมผ้าพันคอเมื่อสั่งตัดชุดมูลค่า 500 บาทขึ้นไป</p>
         </div>
       </a>
     </div>
@@ -614,18 +614,18 @@
         tailoring: "Tailoring",
         shop_dream_fabric: "Pha Sang Fan",
         location_lam_luk_ka: "Lam Luk Ka, Pathum Thani",
-        rating_4_8: "⭐ 4.8 (122)",
+        rating_4_8: "⭐ 4.8 (10)",
         promo_dream_fabric: "20% off first custom order",
         shop_flowing_fabric: "Flowing Fabric",
         location_sathorn: "Sathorn, Bangkok",
-        rating_4_6: "⭐ 4.6 (102)",
+        rating_4_6: "⭐ 4.6 (9)",
         shop_woven_love: "Tho Rak Pak Jai",
         location_khlong_luang: "Khlong Luang, Pathum Thani",
-        rating_4_8_99: "⭐ 4.8 (99)",
+        rating_4_8_99: "⭐ 4.8 (12)",
         shop_tailors_touch: "Tailor's Touch",
         location_bangna: "Bangna, Bangkok",
-        rating_4_7: "⭐ 4.7 (79)",
-        promo_tailors_touch: "Free scarf with custom order over 3,000 THB"
+        rating_4_7: "⭐ 4.7 (10)",
+        promo_tailors_touch: "Free scarf with custom order over 500 THB"
       },
       th: {
         brand: "OUTFITRY",
@@ -645,18 +645,18 @@
         tailoring: "ตัดเย็บ",
         shop_dream_fabric: "ผ้าสร้างฝัน",
         location_lam_luk_ka: "ลำลูกกา ปทุมธานี",
-        rating_4_8: "⭐ 4.8 (122)",
+        rating_4_8: "⭐ 4.8 (10)",
         promo_dream_fabric: "ลด 20% สำหรับชุดสั่งตัดครั้งแรก",
         shop_flowing_fabric: "Flowing Fabric",
         location_sathorn: "สาทร กรุงเทพฯ",
-        rating_4_6: "⭐ 4.6 (102)",
+        rating_4_6: "⭐ 4.6 (9)",
         shop_woven_love: "ทอรัก ปักใจ",
         location_khlong_luang: "คลองหลวง ปทุมธานี",
-        rating_4_8_99: "⭐ 4.8 (99)",
+        rating_4_8_99: "⭐ 4.8 (12)",
         shop_tailors_touch: "Tailor's Touch",
         location_bangna: "บางนา กรุงเทพฯ",
-        rating_4_7: "⭐ 4.7 (79)",
-        promo_tailors_touch: "แถมผ้าพันคอเมื่อสั่งตัดชุดมูลค่า 3,000 บาทขึ้นไป"
+        rating_4_7: "⭐ 4.7 (10)",
+        promo_tailors_touch: "แถมผ้าพันคอเมื่อสั่งตัดชุดมูลค่า 500 บาทขึ้นไป"
       }
     };
 
