--- a/Outfitry-HTML/signup.html
+++ b/Outfitry-HTML/signup.html
@@ -103,7 +103,7 @@
   <div class="container">
     <div class="signup-box">
       <div class="icon">
-        <img id="userIcon" src="C:\Users\USER\dsi202_2025\dsi202_2025\dsi202_2025\Outfitry-HTML\images\user-icon.png" alt="User Icon">
+        <img id="userIcon" src="images/images.png" alt="User Icon">
         <input type="file" id="iconInput" accept="image/*" onchange="updateIcon(event)">
       </div>
       <h2>SIGN UP</h2>
