--- a/Outfitry-HTML/Fashionista.html
+++ b/Outfitry-HTML/Fashionista.html
@@ -586,7 +586,7 @@
             </div>
             <div class="nav-right">
                 <a href="login.html" data-translate="login">Login</a>
-                <a href="#" class="cta" data-translate="cta">Get Outfitry Free</a>
+                <a href="signup.html" class="cta" data-translate="cta">Get Outfitry Free</a>
                 <select class="lang-select" aria-label="Select language" onchange="changeLanguage(this.value)">
                     <option value="en">English</option>
                     <option value="th">ไทย</option>
