--- a/Outfitry-HTML/poweroutfit.html
+++ b/Outfitry-HTML/poweroutfit.html
@@ -377,7 +377,7 @@
         <a href="content.html" data-i18n="nav-content">📄 Content</a>
         <a href="community.html" data-i18n="nav-community">👥 Community</a>
         <a href="custom.html" data-i18n="nav-custom">🧵 Custom</a>
-        <a href="pricing.html" data-i18n="nav-pricing">💰 Pricing</a>
+        <a href="price.html" data-i18n="nav-pricing">💰 Pricing</a>
       </div>
       <div class="nav-right">
         <a href="login.html" data-i18n="login">Login</a>
